<resources>
    <string name="app_name" translatable="false">Hamburgueriaz</string>
    <string name="compact_app_name" translatable="false">Hamb.z</string>

    <!-- Login Activity -->
    <string name="logo_description">Logo da Hamburgueria</string>
    <string name="main_title">Está com Fome?</string>
    <string name="subtitle">Rápido, fresco, e do jeito que você gosta!</string>
    <string name="input_hint">Nome Completo</string>
    <string name="continue_button">Continuar</string>
    <string name="required_field">Este campo é obrigatório.</string>

    <!-- Main Activity -->
    <string name="choose_your_burger">Escolha seu hamburguer agora!</string>
    <string name="choose_a_burger_before_proceed">Selecione um hamburguer antes de prosseguir.</string>
    <string name="order_burger_button">Fazer Pedido</string>
    <string name="burger_image_content_description">Foto do Hamburguer</string>
    <string name="order_summary_burger_photo_description">Foto de uma hamburguer com ovo em um prato de porcelana.</string>
    <string name="finish_your_order">Finalize o\nseu pedido!</string>
    <string name="filled_icon_btn_desc">Botão de adição</string>
    <string name="filled_icon_btn_desc_1">Botão de subtração</string>
    <string name="quantity_title_details">Quantidade</string>

    <!-- Hamburgers -->
    <string name="burger_title">Hambúrguer</string>
    <string name="egg_burger">X-Burger com Ovo</string>
    <string name="cheese_burger">Cheeseburger</string>
    <string name="chicken_burger">Hambúrguer de Frango</string>
    <string name="veggie_burger">Hambúrguer Vegetariano</string>
    <string name="exit_modal_title">Sair</string>
    <string name="exit_modal_message">Deseja realmente sair? Todas as informações serão perdidas.</string>
    <string name="total_amount">Preço Final</string>
    <string name="has_onion_rings">Tem Anéis de cebola?</string>
    <string name="has_cheese">Tem Queijo?</string>
    <string name="has_bacon">Tem Bacon?</string>
    <string name="customer_name">Nome</string>
    <string name="yes">Sim</string>
    <string name="no">Não</string>
    <string name="add_ons_bacon">Bacon</string>
    <string name="add_ons_cheese">Queijo</string>
    <string name="add_ons_onion_rings">Anéis de cebola</string>
    <string name="title_order_summary">Resumo do Pedido</string>
    <string name="add_ons">Adicionais</string>
    <string name="email_subject">Pedido de %1$s</string>
</resources>
