<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/main"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/background_cream"
    android:clipToPadding="false"
    android:padding="32dp"
    tools:context=".OrderSummaryActivity">

    <ImageView
        android:id="@+id/background_wave_2"
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:layout_marginStart="-34dp"
        android:layout_marginTop="-34dp"
        android:layout_marginEnd="-34dp"
        android:background="@drawable/background_order_summary"
        android:contentDescription="@string/order_summary_burger_photo_description"
        android:scaleType="center"
        app:layout_constraintDimensionRatio="4:3"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/logo_text_burger"
        style="@style/Base.Theme.Hamburgueriaz.TextView"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="32dp"
        android:drawablePadding="8dp"
        android:gravity="center_vertical"
        android:text="@string/compact_app_name"
        android:textColor="@color/background_cream"
        android:textSize="14sp"
        app:drawableStartCompat="@drawable/hamburger"
        app:drawableTint="@color/background_cream"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/title_order_summary"
        style="@style/Base.Theme.Hamburgueriaz.TextView"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="64dp"
        android:letterSpacing="0.1"
        android:text="@string/finish_your_order"
        android:textColor="@color/background_cream"
        android:textSize="24sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/logo_text_burger" />

    <TextView
        android:id="@+id/title_order_burger"
        style="@style/Base.Theme.Hamburgueriaz.TextView"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="16dp"
        android:textColor="@color/primary_dark"
        android:textSize="20sp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/background_wave_2" />

    <LinearLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/background_wave_2">

        <Button
            android:id="@+id/icon_sub"
            style="?attr/materialIconButtonFilledStyle"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:backgroundTint="@color/primary_dark"
            android:contentDescription="@string/filled_icon_btn_desc_1"
            app:icon="@drawable/minus"
            app:iconTint="@color/background_cream" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="1" />

        <Button
            android:id="@+id/icon_add"
            style="?attr/materialIconButtonFilledStyle"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:backgroundTint="@color/primary_dark"
            android:contentDescription="@string/filled_icon_btn_desc"
            app:icon="@drawable/plus"
            app:iconTint="@color/background_cream" />
    </LinearLayout>

    <TextView
        android:id="@+id/price_order_burger"
        style="@style/Base.Theme.Hamburgueriaz.TextView"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="8dp"
        android:textColor="@color/primary_dark"
        android:textSize="14sp"
        android:textStyle="bold"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/title_order_burger" />

    <TextView
        android:id="@+id/description_order_burger"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="16dp"
        android:textColor="@color/description"
        android:textSize="12sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/price_order_burger" />

    <!--    <TextView-->
    <!--        android:id="@+id/addons_order_burger"-->
    <!--        android:layout_width="match_parent"-->
    <!--        android:layout_height="wrap_content"-->
    <!--        android:layout_marginTop="24dp"-->
    <!--        android:text="Adicionais"-->
    <!--        android:textColor="@color/primary_dark"-->
    <!--        android:textSize="18sp"-->
    <!--        android:textStyle="bold"-->
    <!--        app:layout_constraintEnd_toEndOf="parent"-->
    <!--        app:layout_constraintStart_toStartOf="parent"-->
    <!--        app:layout_constraintTop_toBottomOf="@+id/description_order_burger" />-->
    <LinearLayout
        android:id="@+id/addons"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="24dp"
        android:orientation="vertical"
        app:layout_constraintTop_toBottomOf="@+id/description_order_burger">

        <!-- Título da Seção -->
        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="Adicionais"
            android:textColor="@color/primary_dark"
            android:textSize="18sp"
            android:textStyle="bold" />

        <!-- Item 1: Bacon -->
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:paddingVertical="2dp">

            <TextView
                android:layout_width="0dp"
                android:layout_height="match_parent"
                android:layout_weight="1"
                android:gravity="center_vertical"
                android:text="Bacon"
                android:textColor="@color/primary_dark"
                android:textSize="16sp" />

            <CheckBox
                android:id="@+id/check_bacon"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:buttonTint="@color/primary_dark" />
        </LinearLayout>

        <com.google.android.material.divider.MaterialDivider
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            app:dividerColor="@color/divider" />

        <!-- Item 2: Queijo -->
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:paddingVertical="2dp">

            <TextView
                android:layout_width="0dp"
                android:layout_height="match_parent"
                android:layout_weight="1"
                android:gravity="center_vertical"
                android:text="Queijo"
                android:textColor="@color/primary_dark"
                android:textSize="16sp" />

            <CheckBox
                android:id="@+id/check_queijo"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:buttonTint="@color/primary_dark" />
        </LinearLayout>

        <com.google.android.material.divider.MaterialDivider
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            app:dividerColor="@color/divider" />

        <!-- Item 3: Onion Rings -->
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:paddingVertical="2dp">

            <TextView
                android:layout_width="0dp"
                android:layout_height="match_parent"
                android:layout_weight="1"
                android:gravity="center_vertical"
                android:text="Onion Rings"
                android:textColor="@color/primary_dark"
                android:textSize="16sp" />

            <CheckBox
                android:id="@+id/check_onion_rings"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:buttonTint="@color/primary_dark" />
        </LinearLayout>

        <com.google.android.material.divider.MaterialDivider
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            app:dividerColor="@color/divider" />
    </LinearLayout>

    <LinearLayout
        android:id="@+id/summary_details"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="24dp"
        android:orientation="vertical"
        app:layout_constraintTop_toBottomOf="@+id/addons">

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="Resumo do Pedido"
            android:textColor="@color/primary_dark"
            android:textSize="18sp"
            android:textStyle="bold" />

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="16dp"
            android:orientation="horizontal"
            android:paddingVertical="2dp">

            <TextView
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:text="Nome"
                android:textColor="@color/primary_dark"
                android:textSize="16sp"
                android:textStyle="bold" />

            <TextView
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:gravity="end"
                android:text="Fulaninho da Silva"
                android:textColor="@color/primary_dark"
                android:textSize="16sp" />
        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="8dp"
            android:orientation="horizontal"
            android:paddingVertical="2dp">

            <TextView
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:text="Tem Bacon?"
                android:textColor="@color/primary_dark"
                android:textSize="16sp"
                android:textStyle="bold" />

            <TextView
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:gravity="end"
                android:text="Sim"
                android:textColor="@color/primary_dark"
                android:textSize="16sp" />
        </LinearLayout>


        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="8dp"
            android:orientation="horizontal"
            android:paddingVertical="2dp">

            <TextView
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:text="Tem Queijo?"
                android:textColor="@color/primary_dark"
                android:textSize="16sp"
                android:textStyle="bold" />

            <TextView
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:gravity="end"
                android:text="Sim"
                android:textColor="@color/primary_dark"
                android:textSize="16sp" />
        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="8dp"
            android:orientation="horizontal"
            android:paddingVertical="2dp">

            <TextView
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:text="Tem Onion Rings?"
                android:textColor="@color/primary_dark"
                android:textSize="16sp"
                android:textStyle="bold" />

            <TextView
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:gravity="end"
                android:text="Sim"
                android:textColor="@color/primary_dark"
                android:textSize="16sp" />
        </LinearLayout>

        <LinearLayout
            android:id="@+id/quantity_text"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="8dp"
            android:orientation="horizontal"
            android:paddingVertical="2dp">

            <TextView
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:text="Quantidade"
                android:textColor="@color/primary_dark"
                android:textSize="16sp"
                android:textStyle="bold" />

            <TextView
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:gravity="end"
                android:text="2"
                android:textColor="@color/primary_dark"
                android:textSize="16sp" />
        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="16dp"
            android:orientation="horizontal"
            android:paddingVertical="2dp"
            app:layout_constraintBottom_toBottomOf="@+id/quantity_text">

            <TextView
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:text="Preço Final"
                android:textColor="@color/primary_dark"
                android:textSize="18sp"
                android:textStyle="bold" />

            <TextView
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:gravity="end"
                android:text="R$ 50.00"
                android:textColor="@color/primary_dark"
                android:textSize="18sp"
                android:textStyle="bold" />
        </LinearLayout>
    </LinearLayout>

    <com.google.android.material.button.MaterialButton
        android:id="@+id/submit_order_button"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="16dp"
        android:text="@string/order_burger_button"
        android:textColor="@color/background_cream"
        android:textStyle="bold"
        app:backgroundTint="@color/dark_green"
        app:cornerRadius="8dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/summary_details" />
</androidx.constraintlayout.widget.ConstraintLayout>
